fixed some bugs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,9 @@
                     "test",
                     "--no-run",
                     "--lib",
-                    "--package=that_bass"
+                    "--package=that_bass",
+                    "--",
+                    "--nocapture"
                 ],
                 "filter": {
                     "name": "that_bass",
