- trying to derive row

--- a/that_base_derive/Cargo.toml
+++ b/that_base_derive/Cargo.toml
@@ -8,5 +8,5 @@ authors = ["Magicolo <magicololand@gmail.com>"]
 proc-macro = true
 
 [dependencies]
-syn = "*"
+syn = { version = "*", features = ["visit-mut"] }
 quote = "*"
