- unreachable and refactor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ authors = ["Magicolo <magicololand@gmail.com>"]
 [dependencies]
 that_base_derive = { path = "./that_base_derive" }
 parking_lot = "*"
-crossbeam-channel = "*"
+concurrent-queue = "*"
+dashmap = "*"
 
 [workspace]
 members = ["that_base_derive"]
