--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,8 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,7 +21,7 @@ jobs:
         rustup override set nightly
         cargo miri setup
     - name: Build Debug
-      run: cargo clean && cargo build --debug --verbose
+      run: cargo clean && cargo build --verbose
     - name: Build Release
       run: cargo clean && cargo build --release --verbose
     - name: Run Debug tests
