--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,8 @@ authors = ["Magicolo <magicololand@gmail.com>"]
 that_base_derive = { path = "./that_base_derive" }
 parking_lot = "*"
 
+[dev-dependencies]
+checkito = { path = "../checkito" }
+
 [workspace]
 members = ["that_base_derive"]
