--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ that_base_derive = { path = "./that_base_derive" }
 parking_lot = "*"
 
 [dev-dependencies]
-checkito = { path = "../checkito" }
+checkito = "0.2.0"
 
 [workspace]
 members = ["that_base_derive"]
