--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ authors = ["Magicolo <magicololand@gmail.com>"]
 
 [dependencies]
 that_base_derive = { path = "./that_base_derive" }
-parking_lot = "*"
+parking_lot = "0.12.1"
 
 [dev-dependencies]
-checkito = "0.2.0"
+checkito = "1.3.0"
 
 [workspace]
 members = ["that_base_derive"]
