--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,12 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
+  "image": "mcr.microsoft.com/vscode/devcontainers/rust:latest",
   "features": {
-    "ghcr.io/devcontainers/features/rust:1": {}
+    "ghcr.io/devcontainers/features/common-utils:latest": {
+      "configureZshAsDefaultShell": true  
+    },
+    "ghcr.io/devcontainers-contrib/features/curl-apt-get:1": {},
+    "ghcr.io/devcontainers/features/rust:latest": {},
+    "ghcr.io/lee-orr/rusty-dev-containers/cargo-expand:latest": {},
+    "ghcr.io/lee-orr/rusty-dev-containers/cargo-watch:latest": {}
   }
 }
