--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,8 +5,24 @@
       "configureZshAsDefaultShell": true  
     },
     "ghcr.io/devcontainers-contrib/features/curl-apt-get:1": {},
-    "ghcr.io/devcontainers/features/rust:latest": {},
+    "ghcr.io/devcontainers/features/rust:latest": {
+      "profile": "default"
+    },
     "ghcr.io/lee-orr/rusty-dev-containers/cargo-expand:latest": {},
     "ghcr.io/lee-orr/rusty-dev-containers/cargo-watch:latest": {}
-  }
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "streetsidesoftware.code-spell-checker",
+        "github.vscode-github-actions",
+        "PKief.material-icon-theme",
+        "mutantdino.resourcemonitor",
+        "yzhang.markdown-all-in-one",
+        "mhutchie.git-graph"
+      ]
+    }
+  },
+  "postCreateCommand": "rustup install nightly && rustup default nightly",
+  "postStartCommand": "rustup update"
 }
