--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,9 @@
 {
-  "image": "mcr.microsoft.com/vscode/devcontainers/rust:latest",
+  "image": "mcr.microsoft.com/vscode/devcontainers/base:latest",
   "features": {
-    "ghcr.io/devcontainers/features/common-utils:latest": {
-      "configureZshAsDefaultShell": true  
-    },
-    "ghcr.io/devcontainers-contrib/features/curl-apt-get:1": {},
+    "ghcr.io/devcontainers-contrib/features/zsh-plugins:latest": {},
+    "ghcr.io/devcontainers-contrib/features/curl-apt-get:latest": {},
+      
     "ghcr.io/devcontainers/features/rust:latest": {
       "profile": "default"
     },
