--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,11 @@
 {
-  "image": "mcr.microsoft.com/vscode/devcontainers/base:latest",
+  "image": "mcr.microsoft.com/vscode/devcontainers/rust:latest",
   "features": {
-    "ghcr.io/devcontainers-contrib/features/zsh-plugins:latest": {},
-    "ghcr.io/devcontainers-contrib/features/curl-apt-get:latest": {},
-      
-    "ghcr.io/devcontainers/features/rust:latest": {
-      "profile": "default"
-    },
-    "ghcr.io/lee-orr/rusty-dev-containers/cargo-expand:latest": {},
-    "ghcr.io/lee-orr/rusty-dev-containers/cargo-watch:latest": {}
+//     "ghcr.io/devcontainers/features/rust:latest": {
+//       "profile": "default"
+//     },
+//     "ghcr.io/lee-orr/rusty-dev-containers/cargo-expand:latest": {},
+//     "ghcr.io/lee-orr/rusty-dev-containers/cargo-watch:latest": {}
   },
   "customizations": {
     "vscode": {
