--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,11 @@
 {
-  "image": "mcr.microsoft.com/vscode/devcontainers/rust:latest",
+  "image": "ubuntu",
   "features": {
-//     "ghcr.io/devcontainers/features/rust:latest": {
-//       "profile": "default"
-//     },
-//     "ghcr.io/lee-orr/rusty-dev-containers/cargo-expand:latest": {},
-//     "ghcr.io/lee-orr/rusty-dev-containers/cargo-watch:latest": {}
+    "ghcr.io/devcontainers/features/rust:latest": {
+      "profile": "default"
+    },
+    "ghcr.io/lee-orr/rusty-dev-containers/cargo-expand:latest": {},
+    "ghcr.io/lee-orr/rusty-dev-containers/cargo-watch:latest": {}
   },
   "customizations": {
     "vscode": {
