--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,11 @@
 {
   "image": "ubuntu",
   "features": {
+    "ghcr.io/devcontainers/features/git:latest": {},
+    "ghcr.io/devcontainers/features/git-lfs:latest": {},
+    "ghcr.io/devcontainers/features/common-utils:latest": {
+      "configureZshAsDefaultShell": true
+    },
     "ghcr.io/devcontainers/features/rust:latest": {
       "profile": "default"
     },
@@ -15,13 +20,13 @@
         "PKief.material-icon-theme",
         "mutantdino.resourcemonitor",
         "yzhang.markdown-all-in-one",
-        "mhutchie.git-graph"
+        "mhutchie.git-graph",
+        "vadimcn.vscode-lldb",
+        "serayuzgur.crates",
+        "rust-lang.rust-analyzer"
       ]
     }
   },
-  "postCreateCommand": {
-    "apt-get": "apt-get update && apt-get upgrade -y && apt-get install -y git curl", 
-    "rustup": "rustup install nightly && rustup default nightly"
-  },
+  "postCreateCommand": "rustup install nightly && rustup default nightly",
   "postStartCommand": "rustup update"
 }
