--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,25 @@
 [package]
 name = "that_bass"
 version = "0.1.0"
-edition = "2021"
 authors = ["Magicolo <magicololand@gmail.com>"]
+edition = "2021"
+readme = "README.md"
+documentation = "https://docs.rs/that_bass/latest/that_bass/"
+license = "MIT"
+repository = "https://github.com/Magicolo/that_bass"
+build = "build.rs"
 
 [dependencies]
 that_base_derive = { path = "./that_base_derive" }
 parking_lot = "0.12.1"
 
 [dev-dependencies]
-checkito = "1.3.6"
-criterion = "0.4.0"
+checkito = "1.3"
+criterion = "0.4"
+skeptic = "0.13"
+
+[build-dependencies]
+skeptic = "0.13"
 
 [workspace]
 members = ["that_base_derive"]
