--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,9 @@ parking_lot = "0.12.1"
 
 [dev-dependencies]
 checkito = "1.3"
-criterion = "0.4"
+criterion = "0.5"
 skeptic = "0.13"
+rayon = "1.7"
 
 [build-dependencies]
 skeptic = "0.13"
