--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,14 @@ build = "build.rs"
 [dependencies]
 that_base_derive = { path = "./that_base_derive" }
 parking_lot = "0.12.3"
+static_assertions = "1.1.0"
 
 [dev-dependencies]
-checkito = "2.0.0"
-criterion = "0.5"
-skeptic = "0.13"
-rayon = "1.7"
+intx = "0.1.0"
+checkito = "3.2.3"
+criterion = "0.5.1"
+skeptic = "0.13.7"
+rayon = "1.10.0"
 
 [build-dependencies]
 skeptic = "0.13"
